# Py_EdenxPrinter

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  LICENSE  Makefile  README.md  debug_contour_filtering.py  debug_id_card_scan.py  debug_multi_strategy_scan.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  temp_file  test_base_utils_fixes.py  test_enhanced_scanner.py  test_final_optimization.py  test_image_analysis_optimization.py  test_image_effects_optimization.py  test_image_scanner_optimization.py  test_modular_opencv.py  test_real_images.py  vcpkg.json
.github/workflows/: build.yml
cmake/: MXPrinterConfig.cmake.in
dialogs/: about_dialog.py  exit_confirm_dialog.py
docs/: background_clear_usage.md  document.md
examples/: CMakeLists.txt  README.md
helper/: image_processor.py
keys/: private.key  public.key
menus/: main_menu.py
mxSdk/: BLEConnection.h  BLEConnection.m  BatterySyncManager.h  BatterySyncManager.m  CRC16.h  CRC16.m  Command.h  Command.m  CommandCallback.h  CommandCallback.m  CommandContext.h  CommandContext.m  Compress.h  Compress.m  ConnModel.h  ConnModel.m  ConnType.h  ConnectManager.h  ConnectManager.m  ConnectionFactory.h  ConnectionFactory.m  ConnectionManager1.h  ConnectionManager1.m  ConnectionStrategy.h  DataObj.h  DataObj.m  DataObjCallback.h  DataObjCallback.m  DataObjContext.h  DataObjContext.m  Device.h  Device.m  Device1.h  Device1.m  DeviceModel.h  DeviceModel.m  DistNetDevice.h  DistNetDevice.m  FirmwareType.h  HttpOtaServer.h  (+33 more)
mxSdk/BabyBluetooth/: BabyBluetooth.h  BabyBluetooth.m  BabyCallback.h  BabyCallback.m  BabyCentralManager.h  BabyCentralManager.m  BabyDefine.h  BabyOptions.h  BabyOptions.m  BabyPeripheralManager.h  BabyPeripheralManager.m  BabyRhythm.h  BabyRhythm.m  BabySpeaker.h  BabySpeaker.m  BabyToy.h  BabyToy.m
mxSdk/Conditions/: ConditionAction.h  ConditionCallback.h  ConditionChecker.h  ConditionCheckerImpl.h  ConditionCheckerImpl.m  ConditionManager.h  ConditionManager.m  MultiConditionAction.h  MultiConditionAction.m
mxSdk/FileManager/: MxFileManager.h  MxFileManager.m  MxRotateUtils.h  MxRotateUtils.m
mxSdk/OpenCV/OpenCVHelper/Helper/: Cropper.h  Cropper.mm  CropperProcessor.h  CropperProcessor.mm  OpenCVImageTool.mm  OpenCVUtils.h  OpenCVUtils.mm  RBQOpenCVUtils.h  RBQOpenCVUtils.mm  Scanner.h  Scanner.mm
mxSdk/OpenCV/OpenCVHelper/View/: CorrectCropMask.h  CorrectCropMask.m  CorrectCropView.h  CorrectCropView.m  DotView.h  DotView.m  MagnifierView.h  MagnifierView.m
mxSdk/OpenCV/Opencv2/opencv2.framework/Versions/A/Headers/core/: core_c.h
mxSdk/OpenCV/WDOpenCV/Helper/: WDOpenCVHelper.h  WDOpenCVHelper.mm
mxSdk/OpenCV/WDOpenCV/View/: WDOpenCVCropMagnifierView.m
mxSdk/Packet/: BasePacket.h  BasePacket.m  LogoDataPacket.h  LogoDataPacket.m  MultiRowDataPacket.h  MultiRowDataPacket.m  OtaDataPacket.h  OtaDataPacket.m
mxSdk/Utils/: AngleConverter.h  AngleConverter.m  CGAffineTransConverter.h  CGAffineTransConverter.m  NSString+String.h  NSString+String.m
mxSdk/WifiCenter/: HotspotUtil.h  HotspotUtil.m
mxSdk/WifiCenter/CocoaAsync/: TCPClient.h  TCPClient.m  TCPServer.h  TCPServer.m  UDPClient.h  UDPClient.m  UDPServier.h  UDPServier.m
mxSdk/XBSTimer/: DelayGCDObjectTimer.h  DelayGCDObjectTimer.m  GCDObjectTimer.h  GCDObjectTimer.m  RepeatGCDObjectTimer.h  RepeatGCDObjectTimer.m  XBSGCDTimer.h  XBSGCDTimer.m  XBSTimer.h  XBSWeakProxy.m
pages/: custom_widgets.py  main_window.py  settings_page.py
scripts/: build_py_to_bin.py  check_binaries.py
sdk/: README.md
sdk/python/mxSdk/: __init__.py
sdk/python/mxSdk/connection/: Json_stream_assembler.py  parameters.py
sdk/python/mxSdk/data/: __init__.py  multi_row_image.py  row_data.py  row_image.py
sdk/python/mxSdk/enums/: data_send_type.py  event_type.py  op_code.py
sdk/python/mxSdk/factories/: logo_data_factory.py
sdk/python/mxSdk/models/: command_callback.py  data_obj_callback.py  data_obj_context.py
sdk/python/mxSdk/opencv/: base_utils.py  image_analysis.py  image_effects.py  opencv_utils_modular.py
sdk/python/mxSdk/transport/: __init__.py
sdk/python/mxSdk/utils/: __init__.py  affine_transform_converter.py  compress.py  dispatch_main_event.py  files_utils.py  rbq_log.py
sdk/python/mxSdk_bin/opencv/: __init__.py
sdk/src/: mx_printer.c
sdk/tools/: build_sdk.py
sdkDemo/: README.md  printer_demo.py  run_demo.sh
sdkDemo/sdk/: README.md  __init__.py
sdkDemo/sdk/python/: __init__.py
sdkDemo/sdk/python/mxSdk/connection/: __init__.py  factory.py  gcd_style_timer.py  gcd_timer_manager.py  manager.py  serial.py  strategy.py  usb.py
sdkDemo/sdk/python/mxSdk/data/: logo_data.py  logo_image.py  multi_row_data.py
sdkDemo/sdk/python/mxSdk/enums/: __init__.py  conn_type.py  connection_status.py  firmware_type.py  paper_type.py  row_layout_direction.py
sdkDemo/sdk/python/mxSdk/factories/: __init__.py  multi_row_data_factory.py
sdkDemo/sdk/python/mxSdk/models/: __init__.py  command.py  command_context.py  data_obj.py  device_info.py
sdkDemo/sdk/python/mxSdk/opencv/: background_cleaner.py  image_geometry.py  image_scanner.py  opencv_utils.py
sdkDemo/sdk/python/mxSdk/packets/: __init__.py  base_packet.py  logo_data_packet.py  multi_row_data_packet.py  ota_data_packet.py
sdkDemo/sdk/python/mxSdk/transport/: protocol.py
sdkDemo/sdk/python/mxSdk/utils/: angle_converter.py  crc16.py  exceptions.py  image_rotate.py  log_level.py  mx_file_manager.py  mx_image_utils.py  string_utils.py
style/: styles.py
tests/: CMakeLists.txt
